centered images inside container

--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -42,7 +42,7 @@
             @Text["nothing_playing_1"]
         </MudText>
 
-        <MudImage Fluid="true" Width="400" Alt="Sad Taylor Swift" Class="rounded-lg my-4" Src="https://i.kym-cdn.com/photos/images/original/001/215/831/397.jpg" />
+        <MudImage Fluid="true" Width="400" Alt="Sad Taylor Swift" Class="rounded-lg my-4 align-self-center" Src="https://i.kym-cdn.com/photos/images/original/001/215/831/397.jpg" />
 
         <MudText Typo="Typo.body1" Align="Align.Center">
             @Text["nothing_playing_2"]
