--- a/Sparkfly.Main/Pages/InfoPage.razor
+++ b/Sparkfly.Main/Pages/InfoPage.razor
@@ -10,7 +10,7 @@
         <bold>@Text["page_title"]</bold>
     </MudText>
 
-    <MudImage Fluid="true" Width="400" Alt="Hello There" Class="rounded-lg my-4" Src=@RandomHelloGif() />
+    <MudImage Fluid="true" Width="400" Alt="Hello There" Class="rounded-lg my-4 align-self-center" Src=@RandomHelloGif() />
 
 
     <MudDivider />
