added top margin in header_1

--- a/Sparkfly.Main/Pages/QueuePage.razor
+++ b/Sparkfly.Main/Pages/QueuePage.razor
@@ -39,7 +39,7 @@
         <MudDivider />
 
 
-        <MudText Align="Align.Center" Typo="Typo.h5">
+        <MudText Align="Align.Center" Typo="Typo.h5" Class="mt-4">
             @Text["header_1"]
         </MudText>
         <MudText Align="Align.Center" Typo="Typo.body1">
