--- a/Sparkfly.Main/Shared/MainNoNavMenuLayout.razor
+++ b/Sparkfly.Main/Shared/MainNoNavMenuLayout.razor
@@ -1,22 +1,18 @@
 ﻿@inherits LayoutComponentBase
 
+@using Sparkfly.Main.Components
+
 <MudThemeProvider @bind-IsDarkMode="@_isDarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
 <MudLayout>
-    <MudAppBar Elevation="0" Color="Color.Primary">
-        <MudSpacer />
-        <h1>SPARKFLY</h1>
-        <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/BuenoVini/Sparkfly" Target="_blank" />
-    </MudAppBar>
+    <AppBar />
 
-    <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Small" Class="my-4 py-4 d-flex justify-center">
-            @Body
-        </MudContainer>
-    </MudMainContent>
+    @if (Body is not null)
+    {
+        <MainContent Body="@Body" />
+    }
 </MudLayout>
 
 @code {
