updated github link in app bar to project's repo

--- a/Sparkfly.Main/Components/AppBar.razor
+++ b/Sparkfly.Main/Components/AppBar.razor
@@ -2,5 +2,5 @@
     <MudSpacer />
     <h1>SPARKFLY</h1>
     <MudSpacer />
-    <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/BuenoVini/Sparkfly" Target="_blank" />
+    <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/BuenoVini/SparkflyBlazor" Target="_blank" />
 </MudAppBar>
