fixed bug to show the menu button when it's needed

--- a/Sparkfly.Main/Components/AppBar.razor
+++ b/Sparkfly.Main/Components/AppBar.razor
@@ -1,6 +1,17 @@
 ﻿<MudAppBar Elevation="0" Color="Color.Primary">
+    @if (ShowMenuButton)
+    {
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => OnButtonClick())" />
+    }
     <MudSpacer />
     <h1>SPARKFLY</h1>
     <MudSpacer />
     <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/BuenoVini/SparkflyBlazor" Target="_blank" />
 </MudAppBar>
+
+@code {
+    [Parameter] public EventCallback OnClickCallback { get; set; }
+    [Parameter] public bool ShowMenuButton { get; set; } = false;
+
+    private async Task OnButtonClick() => await OnClickCallback.InvokeAsync();
+}
