added signature to all pages

--- a/Sparkfly.Main/Pages/InfoPage.razor
+++ b/Sparkfly.Main/Pages/InfoPage.razor
@@ -80,15 +80,11 @@
     </div>
 
 
-    <MudDivider />
+    <MudSpacer />
 
 
     <MudText Typo="Typo.body2" Align="Align.Center">
         @Text["about_7"]
-    </MudText>
-
-    <MudText Typo="Typo.body2" Align="Align.Center">
-        @Text["signature"]
     </MudText>
 </MudStack>
 
