--- a/Sparkfly.Main/Components/MainContent.razor
+++ b/Sparkfly.Main/Components/MainContent.razor
@@ -1,6 +1,18 @@
-﻿<MudMainContent>
-    <MudContainer MaxWidth="MaxWidth.Small" Class="my-4 py-4 d-flex justify-center">
-        @Body
+﻿@using Sparkfly.Main.Components
+
+@inject IStringLocalizer<MainContent> Text
+
+<MudMainContent>
+    <MudContainer MaxWidth="MaxWidth.Small" Class="my-4 py-4">
+        <MudStack Class="d-flex justify-center gap-16">
+            @Body
+
+            <MudDivider />
+
+            <MudText Typo="Typo.body2" Align="Align.Center" Class="mt-n6 mb-1">
+                @Text["signature"]
+            </MudText>
+        </MudStack>
     </MudContainer>
 </MudMainContent>
 
