--- a/Sparkfly.Main/Pages/QueuePage.razor
+++ b/Sparkfly.Main/Pages/QueuePage.razor
@@ -24,7 +24,7 @@
 
             @foreach (var vote in Sparkfly.Votes[i])
             {
-                @if (vote.Client.Id == _thisClient?.Id && !vote.IsOnSpotifyQueue)
+                @if (_thisClient?.IsHost == true || (vote.Client.Id == _thisClient?.Id && !vote.IsOnSpotifyQueue))
                 {
                     <TrackCard Track="vote.VotedTrack" Client="vote.Client" OnClickCallback="@RemoveVote" BtnFunc="TrackCard.BtnFunctionality.Remove" />
                 }
