now it's possible to share a direct link to guests to log in

--- a/Sparkfly.Main/Pages/HelpPage.razor
+++ b/Sparkfly.Main/Pages/HelpPage.razor
@@ -17,6 +17,13 @@
         @Text["about_1"]
     </MudText>
 
+    <MudAlert Severity="Severity.Normal" Variant="Variant.Filled" NoIcon="true" ContentAlignment="HorizontalAlignment.Center">
+        <MudText Typo="Typo.body1" Align="Align.Center">
+            <b>@Text["share"]</b>
+            @(Sparkfly.AppBaseUri + "/welcome/1989")
+        </MudText>
+    </MudAlert>
+
 
     <MudDivider />
 
